# tool_description_lib

./: .clang-format  CMakeLists.txt  Example00.cpp.md  Example01.cpp.md  LICENSE.md  README.md  tdl-config.cmake
.github/: dependabot.yml
.github/workflows/: ci_cmake.yml  ci_codeql.yml  ci_license_check.yml  ci_linux.yml  ci_macos.yml  ci_mingw.yml  ci_sanitizer.yml  ci_ubuntu2004.yml  ci_ubuntu2204.yml  ci_win.yml  ci_win_2019.yml  update_example.yml
build_system/: tdl-config-version.cmake  tdl-config.cmake
cmake/: CPM.cmake  configuration.cmake  install.cmake  tdl-config.cmake.in  version.cmake
include/tdl/: Param.h  ParamCTDFile.h  ParamValue.h  exception.h  platform.h  platform.hpp  version.h
src/tdl/: ParamDocument.h  ParamDocumentToCTD.h  ParamDocumentToCWL.h  ToolInfo.h  convertToCTD.cpp  convertToCTD.h  convertToCWL.cpp  convertToCWL.h  cwl_v1_2.h  generated-cwl.h  tdl.h
src/test_tdl/: ParamDocumentCTD_test.cpp  ParamDocumentToCWL_test.cpp  ParamDocument_test.cpp  ToolInfoToCTD_test.cpp  ToolInfoToCWL_test.cpp  main.cpp  multiple_definition01_test.cpp  multiple_definition02_test.cpp  utils.h
src/test_tdl/example/: CMakeLists.txt  example1.cpp  example2.cpp
test/: CMakeLists.txt  ParamCTDFile_test.cpp  ParamValue_test.cpp  Param_test.cpp  multiple_definition01_test.cpp  multiple_definition02_test.cpp
test/cmake/: add_tdl_test.cmake  tdl_fetch_google_test.cmake  tdl_fetch_google_test_test.cmake
